--- a/css/brands.css
+++ b/css/brands.css
@@ -650,3 +650,13 @@ button:hover,
 .button.button-letterboxd:focus {
   filter: brightness(90%);
 }
+
+/* Action Network */
+.button.button-Action {
+  color: #00c458;
+  background-color: #1d1d25;
+}
+.button.button-letterboxd:hover,
+.button.button-letterboxd:focus {
+  filter: brightness(90%);
+}
